# callcc

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CallCC-draft1_8md.html  Haskell_01`callCC`_01to_01C_09_09_01Sender_8md.html  Makefile  Meta-Prompt_8md.html  README.md  The_01Isomorphism_01of_01Haskell's_01callCC_01to_01C_09_0926_01std____execution___01An_01Exhaust7b85417e3e260d7712fbb47f34f4bae9.html  annotated.html  annotated_dup.js  call__cc_8hpp.html  call__cc_8hpp.js  call__cc_8hpp_source.html  call__cc_8test_8cpp.html  call__cc_8test_8cpp.js  callcc.org  callcc_8md.html  callcc__deep__escape_8cpp.html  callcc__deep__escape_8cpp.js  callcc__early__return_8cpp.html  callcc__early__return_8cpp.js  callcc__exception_8cpp.html  callcc__exception_8cpp.js  callcc__void__escape_8cpp.html  callcc__void__escape_8cpp.js  callcc__when__all_8cpp.html  callcc__when__all_8cpp.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_653eaf5d62926e0ea29795e37808b5d5.html  dir_653eaf5d62926e0ea29795e37808b5d5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_79ca877d095de9b6ddea2a5bad3f89b9.html  dir_79ca877d095de9b6ddea2a5bad3f89b9.js  dir_e931c1a3f0014e624d0645a271726ad2.html  dir_e931c1a3f0014e624d0645a271726ad2.js  (+110 more)
.github/workflows/: ci_tests.yml  codeql.yml  dependency-review.yml  ossf-scorecard-analysis.yml  test_makefile.yaml
cmake/: cxx-modules-rules.cmake
cmake/presets/: CMakeGenericPresets.json  CMakeWindowsPresets.json
docs/: CallCC-draft1.md  Doxyfile  Haskell `callCC` to C++ Sender.md  Meta-Prompt.md  The Isomorphism of Haskell's callCC to C++26 std__execution_ An Exhaustive Theoretical and Practical Implementation Report.md  callcc.md  polymorphic recursion in fingertree spine.md
examples/: just_stopped.cpp  stopping.cpp
include/beman/execution/: stop_token.hpp
include/beman/execution/detail/: almost_scheduler.hpp  as_tuple.hpp  basic_operation.hpp  common_domain.hpp  compl_domain.hpp  completion_signature.hpp  completion_signatures.hpp  connect_all.hpp  continues_on.hpp  counting_scope_base.hpp  counting_scope_join.hpp  decays_to.hpp  default_domain.hpp  dependent_sender.hpp  env.hpp  execution_policy.hpp  get_await_completion_adaptor.hpp  get_env.hpp  hide_sched.hpp  indirect_meta_apply.hpp  logger.hpp  meta_contain_same.hpp  notify.hpp  product_type.hpp  queryable.hpp  run_loop.hpp  sched_env.hpp  schedule_from.hpp  schedule_result_t.hpp  scheduler.hpp  sender_decompose.hpp  sender_to.hpp  spawn_get_allocator.hpp  state_rep.hpp  stoppable_token.hpp  stopped_as_error.hpp  try_query.hpp  unstoppable_token.hpp  when_all_with_variant.hpp  with_await_transform.hpp  (+3 more)
infra/cmake/: beman-install-library.cmake
installtest/: CMakeLists.txt  test.cpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+26 more)
src/beman/execution/: apply_sender.cppm  basic_sender.cppm  basic_state.cppm  call_result_t.cppm  child_type.cppm  common_domain.cppm  completion_signature.cppm  completion_signatures_for.cppm  completion_tag.cppm  connect.cppm  counting_scope.cppm  enable_sender.cppm  error_types_of_t.cppm  forwarding_query.cppm  gather_signatures.cppm  get_awaiter.cppm  get_forward_progress_guarantee.cppm  get_start_scheduler.cppm  hide_sched.cppm  inline_attrs.cppm  matching_sig.cppm  meta_size.cppm  meta_to.cppm  never_stop_token.cppm  nothrow_callable.cppm  operation_state_task.cppm  query_with_default.cppm  receiver_of.cppm  run_loop.cppm  scope_association.cppm  scope_token.cppm  sender_in.cppm  set_stopped.cppm  set_value.cppm  single_sender_value_type.cppm  spawn_future.cppm  stopped_as_error.cppm  stopped_as_optional.cppm  store_receiver.cppm  unspecified_promise.cppm  (+3 more)
src/examples/: CMakeLists.txt  callcc_deep_escape.cpp  callcc_early_return.cpp  callcc_exception.cpp  callcc_void_escape.cpp  callcc_when_all.cpp  hello.cpp
src/smd/: CMakeLists.txt
src/smd/callcc/: CMakeLists.txt  call_cc.hpp  call_cc.test.cpp  callcc.cpp  callcc.hpp  callcc.test.cpp  execution_fw.hpp  execution_fw.test.cpp
tests/beman/execution/: CMakeLists.txt  exec-associate.test.cpp  exec-env.test.cpp  exec-get-delegation-scheduler.test.cpp  exec-getcomplsigs.test.cpp  exec-inline-scheduler.test.cpp  exec-read-env.test.cpp  exec-set-error.test.cpp  exec-snd-transform.test.cpp  exec-stop-when.test.cpp  stop-token-module.test.cpp  stopcallback-inplace-general.test.cpp  stopsource-general.test.cpp  stopsource-inplace-mem.test.cpp  thread.test.cpp  utilities.test.cpp
tests/beman/execution/include/test/: execution.hpp  thread_pool.hpp
